# mfett

./: .gitignore  pyproject.toml
src/mfett/: mfett.py
