[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfett" # Must be a unique name on PyPI
version = "0.0.1" # Use semantic versioning
description = "A short description of your package"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication',
    "Operating System :: OS Independent",
]
dependencies = [ # List your project's dependencies here
]

[project.urls]
Homepage = "https://github.com/subliminalarts/mfett"
